# sensorbridge-speaker-windows

./: .gitignore  README.md  pyproject.toml  speaker_bridge.py
speakerclient/: __init__.py  bridge.py  webrtc_downlink.py
tests/: test_speaker_bridge.py
windows-app/SensorBridge.Speaker.App/: Program.cs  build.ps1  install-shortcut.ps1
